--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .App {
   text-align: center;
 }
+
+.red {
+  color: red;
+  font-weight: bold;
+}
+
+.blue {
+  color: blue;
+  font-weight: bolder;
+}
