--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,26 @@
   color: blue;
   font-weight: bolder;
 }
+
+.App button {
+  border: 1px solid blue;
+  padding: 16px;
+  background-color: aqua;
+  fornt: inherit;
+  color: midnightblue;
+}
+
+.App button:hover {
+  background-color: midnightblue;
+  color: whitesmoke;
+  cursor: pointer;
+}
+
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover {
+  background-color: salmon;
+  color: black;
+}
